manifests/ssp-alb.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-service-portal-alb
spec:
  selector:
    app: self-service-portal
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
